# plugin.video.netflix

./: .gitignore  NFAuthenticationKey.py  changelog.txt  main.py  pyproject.toml
resources/lib/common/: __init__.py  credentials.py  device_utils.py  ipc.py
resources/lib/services/nfsession/msl/: msl_request_builder.py
resources/lib/services/nfsession/session/: access.py  http_requests.py
resources/lib/utils/: website.py
